2010-05-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSGormLoading.m (-awakeWithContext): Add support for a
	recent documents menu.

2010-05-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocumentController.m (-_openRecentDocument:): Give the
	application delegate a chance to open the document. This makes the
	recent documents menu available to non-document based applications
	as documented and implemented by Apple.

2010-05-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarItem.m (-_isFlexibleSpace): Simplify this method.
	* Source/GSToolbarView.m: Clean up toolbar item resizing, this now
	allows for resizable item other than flexible space. If there are
	flexible items and flexible space the items will be expanded first.

2010-05-13  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSNibLoading.m (-nibInstantiateWithOwner:topLeveObjects:,
	-initWithCoder:, -dealloc): Don't send -awakeFromNib to an
	NSApplication proxy (nor any other proxy) and do not record it in
	the top level array either. Identification of proxy objects is
	based on their object IDs.

2010-05-13  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSNibLoading.m (-nibInstantiateWithOwner:topLeveObjects:):
	Make sure all objects are instantiated before establishing any
	connections. This fixes an issue where, e.g., a generic shared
	document controller instance is created before a custom instance
	defined in the nib file.

2010-05-12 18:48-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Added method 
	rightMouseMenu:forEvent: to allow theming of transient and
	context menus.
	* Source/GSThemeMenu.m: Implementation of method 
	rightMouseMenu:forEvent: to allow theming of transient and
	context menus.
	* Source/NSMenu.m: use the theming code implemented above instead
	of rendering the menu directly.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindow.m: Fix a rather long standing incompatibility