@@ -96,7 +96,6 @@ static NSNotificationCenter *nc = nil;
 		 styleMask: (unsigned int)aStyle
 		   backing: (NSBackingStoreType)bufferingType
 		     defer: (BOOL)flag
-		    screen: (NSScreen*)aScreen
 {
   if(NSIsEmptyRect(contentRect))
     {
@@ -106,8 +105,7 @@ static NSNotificationCenter *nc = nil;
   self = [super initWithContentRect: contentRect
 		styleMask: aStyle
 		backing: bufferingType
-		defer: flag
-		screen: aScreen];
+		defer: flag];
   if (self != nil)
     {
       NSRect rect = contentRect;
