@@ -1,3 +1,11 @@
+2010-05-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Source/NSAlert.m:
+	* Source/NSDrawer.m:
+	* Source/NSHelpPanel.m:
+	* Source/NSPrintPanel.m: Propagate the change of NSWindow's
+	designated initializer to all affected subclasses.
+
 2010-05-14  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Source/GSGormLoading.m (-awakeWithContext): Add support for a
